# nexgenvideo

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  FAQ.md  Package.swift  README.md  appcast.xml
.github/workflows/: bundle.yml  ci.yml  engine-ci.yml  release.yml  signing-preflight.yml
Engine/: Package.swift
Sources/MusicvideoPlugin/: AffectProfile.swift  AnalysisRunner.swift  AnalysisSchema.swift  BlockingValidator.swift  Checks.swift  (+24 more)
docs/: CHORD_MODEL.md  CONCEPT.md  ENGINE_MIGRATION.md  MUSICVIDEO_PATTERNS.md  PATTERN_FIT_CONTRACT.md  PLUGIN_STANDARD.md  PROJECT_STORAGE.md  SESSION_HANDOFF.md  UI_UX_CONCEPT.md
engine/: README.md  pyproject.toml
engine/nexgen_engine/: __init__.py  mcp_server.py  pack.py  read.py  state.py
engine/nexgen_engine/brief/: __init__.py  schema.py
engine/nexgen_engine/core/: __init__.py  aspect.py  gates.py  layout.py  models.py  modes.py  paths.py  project.py  schema_versions.py
engine/nexgen_engine/ledger/: schema.py
engine/nexgen_engine/render/: __init__.py  costs.py  manifest.py
engine/nexgen_engine/render/prompt/: __init__.py  builder.py  compliance_linter.py  content_block_linter.py  linter.py
engine/nexgen_engine/sanity/: __init__.py  audit.py
engine/nexgen_engine/sanity/checks/: __init__.py  coverage.py  mode_match.py  prompt_quality.py
engine/nexgen_engine/shotlist/: __init__.py  schema.py
engine/nexgen_engine/show/: __init__.py  formatters.py
engine/nexgen_engine/treatment/: __init__.py  schema.py
engine/tests/: test_audit.py  test_brief.py  test_costs.py  test_discovery.py  test_gates_layout.py  test_gates_state.py  test_ledger.py  test_modes_and_duration.py  test_pack_contract.py  test_prompt.py  test_render_manifest.py  test_run_phase.py  test_run_sanity.py  test_shotlist.py  test_show.py  test_smoke.py  test_state_mcp.py
mcpb/: manifest.json
models/: README.md
packs/: README.md
packs/musicvideo/: pyproject.toml
packs/musicvideo/nexgen_pack_musicvideo/: __init__.py  analysis_schema.py  checks.py  cover.py  pack.py  patterns.py  patterns_mood_inference.py  patterns_schema.py  patterns_similarity.py  tempo.py
packs/musicvideo/nexgen_pack_musicvideo/analysis/: __init__.py  alignment.py  audio.py  downbeats.py  features.py  pipeline.py  preflight.py  sections.py  stems.py  stems_lalal.py
packs/musicvideo/nexgen_pack_musicvideo/analysis/structure/: __init__.py  consolidator.py  essentia_detector.py  librosa_detector.py
packs/musicvideo/tests/: test_analysis_dsp.py  test_analysis_schema.py  test_checks.py  test_cover.py  test_pack.py  test_patterns.py  test_tempo.py
plugins/: musicvideo.json
scripts/: PalmierPro.entitlements  assemble_ngvpack.sh  bundle.sh  dev.sh  dmg-settings.py  export_btc_chord_onnx.py  gen_plugins_json.py  publish_plugin_catalog.py  regen-goldens.sh  release_preflight.py  update_appcast.py
(+666 files in other folders)
