[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexgen-pack-musicvideo"
version = "0.0.1"
description = "NexGenVideo music-video format pack — registers music-specific behavior against the engine contract."
requires-python = ">=3.11"
# nexgen-engine is provided by the environment (installed alongside in CI / bundled by the app).
dependencies = []

# Heavy audio-analysis DSP stack. NOT installed by the fast CI (which installs the
# pack bare) — the analysis modules import these lazily, only when the analysis phase
# runs. Install with: pip install -e ./packs/musicvideo[audio]
[project.optional-dependencies]
audio = [
    "librosa",          # load, beats, energy/tempo curves, laplacian structure (module-level)
    "numpy",            # array math throughout the DSP (module-level)
    "scikit-learn",     # KMeans clustering in structure detection (module-level)
    "madmom",           # downbeat detection + chord recognition (lazy)
    "essentia",         # SBic structure detection + key extraction (lazy)
    "demucs",           # stem separation (lazy)
    "torch",            # demucs / whisperx device backend (lazy)
    "torchaudio",       # stem I/O + resampling (lazy)
    "whisperx",         # forced lyric alignment (lazy)
    "requests",         # LALAL.AI stem-separation REST adapter (lazy)
]

# Discovered by the engine's pack auto-discovery (importlib.metadata, group "nexgen.packs").
[project.entry-points."nexgen.packs"]
musicvideo = "nexgen_pack_musicvideo:MusicvideoPack"

[tool.hatch.build.targets.wheel]
packages = ["nexgen_pack_musicvideo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
